<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="account_name"
        android:title="@string/account"/>

    <MultiSelectListPreference
        android:defaultValue="@array/notification_type_values"
        android:entries="@array/notification_types"
        android:entryValues="@array/notification_type_values"
        android:key="show_notifications"
        android:title="@string/notifications"/>

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="ringtone"
        android:ringtoneType="notification"
        android:title="@string/ringtone"/>

    <ListPreference
        android:defaultValue="@string/automatic_value"
        android:entries="@array/distance_units_entries"
        android:key="distance_unit"
        android:summary="%s"
        android:title="@string/distance_units"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="allow_analytics"
        android:summaryOff="@string/allow_analytics_off"
        android:summaryOn="@string/allow_analytics_on"
        android:title="@string/allow_analytics"/>

</PreferenceScreen>
